Increase grid-gap to 2px to avoid browser rendering issues

--- a/src/battleship/src/main/resources/static/css/style.css
+++ b/src/battleship/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(10, 30px);
   margin: 20px;
   background-color: rgba(222, 226, 230, 0.1);
-  grid-gap: 1px;
+  grid-gap: 2px;
   border: 1px solid rgba(222, 226, 230, 0.1);
 }
 
